--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -12,11 +12,13 @@
 </head>
 <body>
     <h2>
-        <span th:text="'Message: ' + ${message}"></span>
+        <span th:text="'Hello. ' + ${message}"></span>
     </h2>
 
-    <p th:text="'PM 2.5:' + ${PM2}"></p>
-    <p th:text="'PM  10:' + ${PM10}"></p>
+    <p th:text="'PM2.5:   ' + ${#numbers.formatDecimal(PM2, 0, 'COMMA', 2, 'POINT')} + ' ug/m3'"></p>
+    <p th:text="'PM 10:   ' + ${#numbers.formatDecimal(PM10,0, 'COMMA', 2, 'POINT')} + ' ug/m3'"></p>
 
+    <div th:if="${PM2}<50"><p>Air quality is good :)</p></div>
+    <div th:if="${PM2}>50"><p>Air quality is bad :(</p></div>
 </body>
 </html>
