--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <head>
     <meta charset="UTF-8">
     <title>airq app</title>
     <link href='https://fonts.googleapis.com/css?family=Nova Mono' rel='stylesheet'>
     <style>
         body {
+            height: 100%;
+            width: 100%;
             font-family: 'Nova Mono';font-size: 22px;
         }
     </style>
@@ -18,7 +21,7 @@
     <p th:text="'PM2.5:   ' + ${#numbers.formatDecimal(PM2, 0, 'COMMA', 2, 'POINT')} + ' ug/m3'"></p>
     <p th:text="'PM 10:   ' + ${#numbers.formatDecimal(PM10,0, 'COMMA', 2, 'POINT')} + ' ug/m3'"></p>
 
-    <div th:if="${PM2}<50"><p>Air quality is good :)</p></div>
-    <div th:if="${PM2}>50"><p>Air quality is bad :(</p></div>
+    <div th:if="${PM2}<50"><h2 style="color:green;">Air quality is good :)</h2></div>
+    <div th:if="${PM2}>50"><h2 style="color:red">Air quality is bad :(</h2></div>
 </body>
 </html>
