--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -38,7 +38,7 @@
         <tr th:each="value : ${VALUES}">
             <td><span th:text="${value.key}"> key </span></td>
             <td><span th:text="${#numbers.formatDecimal(value.value,0,'COMMA',2,'POINT')} + ' ug/m3'"
-                      th:classappend="${value.value}<50 ? color-green : color-red"> value </span></td>
+                      th:classappend="${value.value}<50 and ${value.value}>=0 ? color-green : color-red"> value </span></td>
         </tr>
     </table>
 </body>
